--- a/pom.xml
+++ b/pom.xml
@@ -3,4 +3,20 @@
   <groupId>com.qa</groupId>
   <artifactId>MorseCodeTranslator</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <dependencies>
+  
+	<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
+	<dependency>
+	    <groupId>org.junit.jupiter</groupId>
+	    <artifactId>junit-jupiter-api</artifactId>
+	    <version>5.7.0</version>
+	    <scope>test</scope>
+	</dependency>
+
+    <dependency>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-compiler-plugin</artifactId>
+      <version>3.8.1</version>
+    </dependency>
+  </dependencies>
 </project>
